opa-gatekeeper-policy.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: ocpdenynonmatchingstorageclass
spec:
  crd:
    spec:
      names:
        kind: OcpDenyNonMatchingStorageClass
      validation:
        openAPIV3Schema:
          type: object          

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
      
        package openshiftstorageclasspolicy 

        violation[{"msg": msg}] {
            not input.review.object.spec.storageClassName == ""
            not startswith(input.review.object.spec.storageClassName, input.review.object.metadata.namespace)
            msg := sprintf("Storage Class Name MUST start with  %s", [input.review.object.metadata.namespace])
        }{
        	input.review.object.spec.storageClassName == ""
          not startswith(input.review.object.spec.storageClassName, input.review.object.metadata.namespace)
        	msg := "Storage Class name MUST be specified. None provided"
        }
